@@ -1,4 +1,9 @@
-2010-12-13  Lee Howard <faxguy@howardsilvan.com>
+2010-12-14  Lee Howard <faxguy@howardsilvan.com>
+
+	* tools/gif2tiff.c: fix buffer overrun
+	http://bugzilla.maptools.org/show_bug.cgi?id=2270
+
+2010-12-14  Lee Howard <faxguy@howardsilvan.com>
 
 	* libtiff/tif_jpeg.c: reduce usage of JCS_UNKNOWN in order
 	to improve compatibility with various viewers
